# tiger2

./: .ghci  .gitignore  CHANGELOG.md  LICENSE  Main.hs  README.md  array.s  array.tig  closure.s  closure.tig  compile_and_run_all.sh  for.s  gen_info_table.sh  hello.s  merge.tig  params.s  params.tig  profile.project  queens.s  queens.tig  recursive.s  recursive.tig  smallmerge.tig  tiger2.cabal
programs/: array.out  array.s  closure.out  closure.s  for.out  for.s  for.tig  hello.out  hello.s  merge.out  merge.s  params.s  queens.out  queens.s  record.s  record.tig  reserved_name.s  reserved_name.tig
src/: Tiger.hs
src/Tiger/: AST.hs  Assem.hs  Canon.hs  Codegen.hs  Color.hs  FindEscape.hs  Frame.hs  Grammar.y  Instr.hs  IntVar.hs  Liveness.hs  MipsFrame.hs  MipsGen.hs  Parser.hs  Pretty.hs  RegAlloc.hs  Semant.hs  Symbol.hs  Tc.hs  Temp.hs  Tokens.hs  Tokens.x  Translate.hs  Tree.hs  Types.hs
test/: Main.hs  TestFlowGraph.hs  TestLiveness.hs  TestRegAlloc.hs
