cabal-version:      3.0
name:               tiger2
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Darin Minamoto
maintainer:         darinm223@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules: Tiger
                   , Tiger.AST
                   , Tiger.FindEscape
                   , Tiger.Frame
                   , Tiger.Grammar
                   , Tiger.IntVar
                   , Tiger.MipsFrame
                   , Tiger.Parser
                   , Tiger.Semant
                   , Tiger.Symbol
                   , Tiger.Tc
                   , Tiger.Temp
                   , Tiger.Tokens
                   , Tiger.Translate
                   , Tiger.Tree
                   , Tiger.Types

    ghc-options: -Wall
                 -Wcompat
                 -Wincomplete-record-updates
                 -Wincomplete-uni-patterns
                 -Wredundant-constraints
                 -Wredundant-record-wildcards
                 -Wunused-record-wildcards
                 -fshow-hole-constraints
                 -haddock

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-tool-depends: alex:alex
                      , happy:happy
    build-depends:    base ^>=4.15.0.0
                    , array
                    , containers
                    , hashtables
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable tiger2
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.15.0.0,
        tiger2

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010

test-suite tiger2-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.15.0.0
